agregar y eliminar categoria de producto

--- a/SysDVW/appsettings.json
+++ b/SysDVW/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalConnection": "Data Source=.;Initial Catalog=SalesSystem;Integrated Security=True"
+    "LocalConnection": "Data Source=.;Initial Catalog=SalesSystemWeb;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
